@@ -1,3 +1,7 @@
+2011-02-12 Roman
+- UI.Vision: Lost connection to visualisation server message is added for run from visualisation server.
+
+
 2011-02-11 Maxim
 - UI.WebVision: Widget's position remnant is acquired for internal points coordinates calc of primitive "ElFigure".
 
